sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:15: error: not found: value tab
		if(tab[j]<tab[minimum] )
                   ^